	XKore_listenIp
	XKore_listenPort
- removeActorWithDistance
- route_randomWalk_inTown
- teleportAuto_useChatCommand <command>
  Use a specified chat command for random teleport.
- saveMap_warpChatCommand <command>
  Use a specified chat command for respawning or warping to saveMap.
- statsAdd_over_99: set this option to make Kore lift the restriction on adding
  stat points over 99

New commands:
- cart release: remove cart status
- falcon [release]: Display or remove falcon status
- pecopeco [release]: Display or remove pecopeco status
- ai manual: Pause automated botting and allow manual control
- ai auto: Same as 'ai on'

Internal:
- Implemented the beginning of a localization framework.
- Actor::get($ID) now returns $players{$ID} instead of $monsters{$ID}
  when both exist (which shouldn't happen, but this is a workaround for
  players being incorrectly detected as monsters).
- packet_outMangle/$switch hook is now called before openkore's built-in
  mangling, to give plugins more freedom.
- packet_attack hook now has extra 'type' argument.
- 'player' plugin hook, when called by 'Player Exists', is now called
  after all $player->{...} have been set to give more accurate information.
- all receive packets have been moved to Receive.pm now.
- $item->{ID} is now stored.
- New modes for $AI: 0 = off, 1 = manual, 2 = auto.
- partySkill now operates on an Actor::Player object always. This should
  fix the problem when a party member is on your screen, but never moved
  before and thus has no coordinates in $char->{party}{users}{$ID} and
  causes location-based partySkills to cast on (0,0).

Credits:
- id-mardi: fix for setPartySkillTimer, move the rest of the receive packets
  to Receive.pm
- mondlicht: teleportAuto_avoidAllPlayers bugfix
- Lord_Balmon: fix for the Win32 GUI interface
- h4rry84: Indonesian translation
- hakore: fix for weight command, manual AI mode
- illusionist: move receive packets to Receive.pm, falcon and peco release